FIX Error for NPE after upgrading Apache Httpcomponents